crates/lang/macro/tests/ui/trait_def/fail/message_missing_receiver.stderr
error: missing or malformed `&self` or `&mut self` receiver for ink! message
 --> $DIR/message_missing_receiver.rs:6:5
  |
6 |     fn message();
  |     ^^^^^^^^^^^^
